test/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bal-ingress
  namespace: argocd
spec:
  rules:
    - host: argocd.my
      http:
        paths:
          - backend:
              service:
                name: argocd-server
                port:
                  number: 443
            pathType: Prefix
            path: /
