test/bal-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: bal-server
spec:
  selector:
    app: bal-server
  ports:
    - port: 8080
  type: ClusterIP
