test/bal-server.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-nginx-pod
spec:
  containers:
    - name: nginx
      image: nginx:1.23
      ports:
        - containerPort: 80
