test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bal-ingress
spec:
  rules:
    - host: bal-server.my
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bal-server
                port:
                  number: 8080
